--- a/style.css
+++ b/style.css
@@ -32,19 +32,103 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 50px;
   opacity: 0.9;
+  transition: top 1s;
 }
 
-nav ul {
+.droite {
   color: white;
   float: right;
   margin-right: 20px;
+  margin-top: 12px;
 }
 
 
-nav li {
+.droite li {
   display: inline-block;
   padding: 5px;
+}
+
+.lines {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  float: left;
+  left: 0;
+  margin: 17px 0px 0px 12px;
+  transition: left 1s ease, transform 1s ease;
+}
+
+.lines.active {
+  left: 250px;
+  transform: rotate(270deg) translateX(2px) translateY(2px);
+}
+
+#firstline,
+#secondline,
+#thirdline {
+  height: 1px;
+  width: 20px;
+  margin-bottom: 5px;
+  background-color: #FFFAE1;
+  box-shadow: 1px 3px 2px black;
+  opacity: 1;
+}
+
+
+.menu {
+  position: fixed;
+  left: -250px;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #000000;
+  transition: left 1s ease;
+}
+
+
+.menu.active {
+  left: 0px;
+}
+
+
+.menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu ul li {
+  padding: 10px;
+  text-align: center;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu ul li:hover {
+  color: #db0000;
+  transform: scale(1.1);
+}
+
+.menu ul li ul li {
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+
+.hidden {
+  display: none;
+}
+
+#Home {
+  margin-top: 10px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 
