--- a/test.css
+++ b/test.css
@@ -61,6 +61,10 @@ h2 {
   z-index: 2;
 }
 
+.output {
+  display: none;
+}
+
 
 
 .slider-container {
@@ -94,6 +98,30 @@ input[type="range"]::-webkit-slider-thumb {
 input[type="range"] {
   width: 100%;
   margin-top: 20px;
+}
+
+#question-container .flower-part {
+  margin: 20px;
+  display: inline-block;
+}
+
+#question-container .flower {
+  display: block;
+  margin-top: 4%;
+  margin-left: 3%;
+}
+
+.flower-part {
+  width: 50px;
+  /* Largeur de chaque partie de la fleur, ajustez selon vos besoins */
+  height: 50px;
+  /* Hauteur de chaque partie de la fleur, ajustez selon vos besoins */
+  display: inline-block;
+}
+
+.flower-part.full {
+  background-color: black;
+  /* Couleur de la partie complète de la fleur */
 }
 
 
@@ -145,7 +173,7 @@ input[type="range"] {
 }
 
 .question .confirmerslider {
-  margin-left: 44%;
+  margin-left: 45%;
   margin-top: 10%;
   align-items: center;
   justify-content: center;
