--- a/test.css
+++ b/test.css
@@ -315,9 +315,9 @@ input[type="range"] {
   }
 
   #imgresult {
-    right: 17%;
+    right: 0;
     bottom: 10%;
-    position: fixed;
+    position: relative;
     margin: 0 auto;
     width: 70%;
     max-width: 300px;
@@ -330,7 +330,6 @@ input[type="range"] {
     left: -1%;
     position: relative;
     display: block;
-    margin-top: 75%;
     text-align: center;
     text-decoration: none;
     color: black;
